--- a/src/styles/Counter.css
+++ b/src/styles/Counter.css
@@ -4,6 +4,7 @@
     margin: 0 auto;
     padding: 0;
     font-family: sans-serif;
+    text-align: center;
     color: white;
     display: flex;
     justify-content: center;
@@ -30,12 +31,13 @@
 .counter__buttons button {
     color: white;
     font-weight: bold;
-    font-size:1.5em;
+    font-size: 1.5em;
+    text-align: center;
     margin-left: 5px;
     margin-right: 5px;
     cursor: pointer;
     height: 50px;
-    width: 100px;
+    width: 120px;
     border: 1px;
     border-radius: 15px;
     outline: none;
