--- a/src/styles/Weather.css
+++ b/src/styles/Weather.css
@@ -13,7 +13,6 @@
     margin-bottom: 10px;
     font-size: 1.5em;
     font-weight: bold;
-
 }
 
 .search-container {
@@ -51,7 +50,7 @@
     border: 1px solid #ccc;
     border-radius: 4px;
     z-index: 1000;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     list-style-type: none;
     padding: 12px;
     margin: 0;
@@ -111,9 +110,15 @@
 }
 
 .forecast-details p {
+    display: flex;
     margin: 0;
     padding: 10px;
+    height: 50px;
+    align-items: center;
+    justify-content: center;
+    font-size: x-large;
     background-color: #f7f9fc;
+    font-weight: bold;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
@@ -127,7 +132,6 @@
 .forecast-big {
     font-size: 3em;
 }
-
 
 .weather__block {
     display: flex;
